[package]
name = "clblas-sys"
version = "0.1.0"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
edition = "2018"
links = "clBLAS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cl-sys = "^0.4"

[build-dependencies]
bindgen = "^0.53"
